Refactor/internal recommend (#47)